--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
   "_npmVersion": "1.1.62",
   "_npmUser": {
     "name": "jeakey",
-    "email": "joriami@qq.com"
+    "email": "jeakey@qq.com"
   },
   "maintainers": [
     {
       "name": "joriami",
-      "email": "joriami@qq.com"
+      "email": "jeakey@qq.com"
     }
   ],
   "directories": {}
